inactive/applications/omnigent/allow-omnigent-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-omnigent
  namespace: cloudnative-pg
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: omnigent
      ports:
        - port: 9090
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: omnigent
      ports:
        - port: 8000
          protocol: TCP
